--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -1,7 +1,7 @@
 .List {
     padding: 20px;
     width: 300px;
-    height: 600px;
+    height: 80vh;
     background-color: #17408b;
     overflow-x: hidden;
     overflow-y: scroll;
